# cad-future

./: .gitignore  Cargo.toml  README.md  build.sh
crates/connect/bambu/: Cargo.toml
crates/connect/bambu/src/: lib.rs
crates/connect/cncjs/: Cargo.toml
crates/connect/cncjs/src/: lib.rs
crates/connect/core/: Cargo.toml
crates/connect/core/src/: error.rs  lib.rs  registry.rs  types.rs
crates/connect/discover/: Cargo.toml
crates/connect/discover/src/: lib.rs
crates/connect/duet/: Cargo.toml
crates/connect/duet/src/: lib.rs
crates/connect/firmware/: Cargo.toml
crates/connect/firmware/src/: lib.rs
crates/connect/fluidnc/: Cargo.toml
crates/connect/fluidnc/src/: lib.rs
crates/connect/formlabs/: Cargo.toml
crates/connect/formlabs/src/: lib.rs
crates/connect/github-cad/: Cargo.toml
crates/connect/github-cad/src/: lib.rs
crates/connect/haas/: Cargo.toml
crates/connect/haas/src/: lib.rs
crates/connect/k40/: Cargo.toml
crates/connect/k40/src/: lib.rs
crates/connect/lightburn/: Cargo.toml
crates/connect/lightburn/src/: lib.rs
crates/connect/linuxcnc/: Cargo.toml
crates/connect/linuxcnc/src/: lib.rs
crates/connect/mcmaster/: Cargo.toml
crates/connect/mcmaster/src/: lib.rs
crates/connect/moonraker/: Cargo.toml
crates/connect/moonraker/src/: lib.rs
crates/connect/mtconnect/: Cargo.toml
crates/connect/mtconnect/src/: lib.rs
crates/connect/octoprint/: Cargo.toml
crates/connect/octoprint/src/: lib.rs
crates/connect/openie/: Cargo.toml
crates/connect/openie/src/: lib.rs
crates/connect/protocol/: Cargo.toml  SPEC.md
crates/connect/protocol/src/: auth.rs  capability.rs  error.rs  job.rs  lib.rs  message.rs  method.rs  status.rs  stream.rs
crates/connect/prusalink/: Cargo.toml
crates/connect/prusalink/src/: lib.rs
crates/connect/repetier/: Cargo.toml
crates/connect/repetier/src/: lib.rs
crates/connect/ruida/: Cargo.toml
crates/connect/ruida/src/: lib.rs
crates/connect/serial/: Cargo.toml
crates/connect/serial/src/: lib.rs
crates/connect/ultimaker/: Cargo.toml
crates/connect/ultimaker/src/: lib.rs
crates/connect/zoo/: Cargo.toml
crates/connect/zoo/src/: lib.rs
crates/core/bom/: Cargo.toml
crates/core/bom/src/: lib.rs
crates/core/cascade/: Cargo.toml
crates/core/cascade/src/: lib.rs
crates/core/cfl/: Cargo.toml
crates/core/cfl/src/: lib.rs
crates/core/constraint/: Cargo.toml
crates/core/constraint/src/: lib.rs
crates/core/costing/: Cargo.toml
crates/core/costing/src/: lib.rs
crates/core/graph/: Cargo.toml
crates/core/graph/src/: lib.rs
crates/core/impedance/: Cargo.toml
crates/core/impedance/examples/: audit.rs
crates/core/impedance/src/: lib.rs
crates/core/knowledge/: Cargo.toml
crates/core/knowledge/src/: lib.rs
crates/core/lut/: Cargo.toml
crates/core/lut/src/: formulas.rs  lib.rs  manufacturing.rs  standards.rs
crates/core/standards/: Cargo.toml
crates/core/standards/src/: lib.rs
crates/core/tolerance/: Cargo.toml
crates/core/tolerance/src/: lib.rs
crates/core/units/: Cargo.toml
crates/core/units/src/: lib.rs
crates/emit/bgcode/: Cargo.toml
crates/emit/bgcode/src/: lib.rs
crates/emit/drawing/: Cargo.toml
crates/emit/dxf/: Cargo.toml
crates/emit/gerber/: Cargo.toml
crates/emit/gltf/: Cargo.toml
crates/emit/idf/: Cargo.toml
crates/emit/iges/: Cargo.toml
crates/emit/kicad/: Cargo.toml
crates/emit/oie/: Cargo.toml
crates/emit/parasolid/: Cargo.toml
crates/emit/ruida-rd/: Cargo.toml
crates/emit/step/: Cargo.toml
crates/emit/stl/: Cargo.toml
crates/emit/threemf/: Cargo.toml
crates/emit/touchstone/: Cargo.toml
crates/emit/ufp/: Cargo.toml
crates/geometry/brep/: Cargo.toml
crates/geometry/parametric/: Cargo.toml
crates/geometry/sketch/: Cargo.toml
crates/geometry/tessellation/: Cargo.toml
crates/input/: Cargo.toml
crates/input/src/: action.rs  haptics.rs  input_map.rs  keycode.rs  lib.rs  state.rs  touch.rs  virtual_controls.rs
crates/mfg/cnc/: Cargo.toml
crates/mfg/laser/: Cargo.toml
crates/mfg/slicer/: Cargo.toml
crates/mfg/toolpath/: Cargo.toml
crates/platform/eco/: Cargo.toml
crates/platform/mcp/: Cargo.toml
crates/platform/native/: Cargo.toml
crates/platform/review/: Cargo.toml
crates/platform/server/: Cargo.toml
crates/platform/web/: Cargo.toml
crates/reasoning/agent/: Cargo.toml
crates/reasoning/flow-cad/: Cargo.toml
crates/reasoning/gen-bridge/: Cargo.toml
crates/reasoning/generative/: Cargo.toml
crates/reasoning/inference/: Cargo.toml
crates/reasoning/intent/: Cargo.toml
crates/reasoning/inverse/: Cargo.toml
crates/reasoning/scan2cad/: Cargo.toml
crates/reasoning/search/: Cargo.toml
crates/reasoning/surrogate/: Cargo.toml
crates/render/instancing/: Cargo.toml
crates/render/lod/: Cargo.toml
crates/render/overlay/: Cargo.toml
crates/render/viewport/: Cargo.toml
crates/simulation/analytical/: Cargo.toml
crates/simulation/cfd/: Cargo.toml
crates/simulation/dfm/: Cargo.toml
crates/simulation/digital-twin/: Cargo.toml
crates/simulation/em/: Cargo.toml
crates/simulation/fea/: Cargo.toml
crates/simulation/snn/: Cargo.toml
crates/simulation/topology/: Cargo.toml
crates/tests/integration/: Cargo.toml
crates/tests/proptest/: Cargo.toml
crates/ui/: Cargo.toml
crates/ui/src/: annotation_tools.rs  appearance_browser.rs  assembly_browser.rs  bom_table.rs  breadcrumb_bar.rs  collaboration.rs  color_picker.rs  confirmation_corner.rs  constraint_icons.rs  context.rs  context_toolbar.rs  data_management.rs  dimension_overlay.rs  draw.rs  drawing_view.rs  exploded_view.rs  export_dialog.rs  feature_tree.rs  flyout_toolbar.rs  font.rs  gdt_panel.rs  hole_wizard.rs  lib.rs  marking_menu.rs  mate_dialog.rs  measure_tool.rs  menu_bar.rs  notification_center.rs  pattern_dialog.rs  perf_hud.rs  preferences.rs  progress_overlay.rs  property_panel.rs  quick_access_bar.rs  reference_geometry.rs  render_settings.rs  renderer.rs  section_view.rs  selection_info.rs  sheet_metal.rs  (+16 more)
crates/ui/src/shaders/: ui.wgsl
web/: _headers  app.html  glue.js  index.html
(+178 files in other folders)
