[package]
name = "physical-ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Immediate-mode UI framework rendered directly with wgpu — no external UI library"

[dependencies]
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
