[package]
name = "physical-connect-bambu"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Bambu Lab machine connectivity driver (LAN MQTT + FTPS)"

[dependencies]
physical-connect-core = { path = "../core" }
async-trait = "0.1"
rumqttc = "0.25"
suppaftp = { version = "8", features = ["tokio", "tokio-rustls-aws-lc-rs"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-util = { version = "0.3", features = ["io"] }
