[package]
name = "physical-connect-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core traits and types for manufacturing machine connectivity"

[dependencies]
async-trait = "0.1"
thiserror = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
