[package]
name = "physical-connect-github-cad"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GitHub integration for CAD design review — diff visualization, PR comments, webhooks"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
