[package]
name = "physical-connect-haas"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Haas MDC HTTP machine connectivity driver"

[dependencies]
physical-connect-core = { path = "../core" }
async-trait = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
