[package]
name = "physical-connect-k40"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "K40 USB (Lhymicro-GL) laser connectivity driver"

[dependencies]
physical-connect-core = { path = "../core" }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
