[package]
name = "physical-connect-lightburn"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "LightBurn Bridge TCP connectivity driver"

[dependencies]
physical-connect-core = { path = "../core" }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
