[package]
name = "physical-connect-mcmaster"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "McMaster-Carr standard parts catalog integration — fasteners, bearings, seals"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
