[package]
name = "physical-connect-moonraker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Moonraker/Klipper machine connectivity driver"

[dependencies]
physical-connect-core = { path = "../core" }
async-trait = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
