[package]
name = "physical-connect-openie"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "OpenIE Manufacturing Protocol client driver"

[dependencies]
physical-connect-core = { path = "../core" }
physical-connect-protocol = { path = "../protocol" }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
