[package]
name = "physical-connect-prusalink"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "PrusaLink machine connectivity driver (HTTP + Digest auth)"

[dependencies]
physical-connect-core = { path = "../core" }
async-trait = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
digest_auth = "0.3"
