[package]
name = "physical-connect-serial"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "USB serial machine connectivity driver for Marlin and GRBL"

[dependencies]
physical-connect-core = { path = "../core" }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-serial = "5.4"
bytes = "1"
