[package]
name = "physical-connect-zoo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Zoo/KittyCAD API connector — import KCL designs and geometry into OpenIE"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
physical-cfl = { path = "../../core/cfl" }
