[package]
name = "physical-bom"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Bill of Materials engine — part numbering, BOM structure, where-used, impact analysis"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
