[package]
name = "physical-cascade"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Query router — LUT → formula → solver → LLM cascade"

[dependencies]
physical-units = { workspace = true }
physical-lut = { workspace = true }
physical-constraint = { workspace = true }
