[package]
name = "physical-constraint"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Boolean pass/fail constraint validator — DFM, stress, tolerance checks against LUT data"

[features]
default = ["std"]
std = []

[dependencies]
physical-units = { workspace = true }
physical-lut = { workspace = true }
