[package]
name = "physical-graph"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Embedded graph DB — 16-dimension node/edge store, backed by HyperDB"

[dependencies]
physical-units = { workspace = true }
hyperdb = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
